# Glint

./: .gitignore  CLAUDE.md  LICENSE  README.md  Snip_ClaudeCode_Build_Prompt.md
docs/superpowers/: IMPROVEMENTS-AND-ADDITIONS.md  PHASE-1-ACCEPTANCE.md  PHASE-10-OCR-ACCEPTANCE.md  PHASE-17-ACCEPTANCE.md  PHASE-2-ACCEPTANCE.md  PHASE-25-ACCEPTANCE.md  PHASE-4-ACCEPTANCE.md  PHASE-5A-ACCEPTANCE.md  PHASE-5B-ACCEPTANCE.md  PHASE-5C-ACCEPTANCE.md  PHASE-6-ACCEPTANCE.md  PHASE-7-ACCEPTANCE.md  PHASE-8-RECORDER-R1-ACCEPTANCE.md  PHASE-8-RECORDER-R2-ACCEPTANCE.md  PHASE-8-RECORDER-R3-ACCEPTANCE.md  PHASE-9-RECORDING-TRIM-ACCEPTANCE.md  ROADMAP.md
docs/superpowers/plans/: 2026-06-20-glint-phase1-app-shell.md  2026-06-21-glint-phase2-screenshots.md  2026-06-22-glint-phase4-autosave-library.md  2026-06-22-glint-phase5a-annotation-editor.md  2026-06-22-glint-phase5b-crop-framing.md  2026-06-23-glint-phase5c-glint-document.md  2026-06-24-glint-phase6-open-in-glint.md  2026-06-24-glint-phase7-pin-to-screen.md  2026-06-28-glint-phase8-recorder-r1.md  (+21 more)
glint/: README.md  index.html  package-lock.json  package.json  vite.config.ts
glint/src/: App.tsx  main.tsx  router.tsx
glint/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
glint/src-tauri/capabilities/: default.json  editor.json  hud.json  ocr.json  overlay.json  pin.json  recorder.json
glint/src-tauri/icons/: icon.icns
glint/src-tauri/src/: autostart.rs  clipboard.rs  countdown.rs  hud.rs  lib.rs  main.rs  overlay.rs  paths.rs  pin.rs  shell_integration.rs  shortcuts.rs  tray.rs  window.rs
glint/src-tauri/src/capture/: commands.rs  cursor.rs  frozen.rs  geometry.rs  mod.rs  thumb.rs  tray.rs  windows_enum.rs
glint/src-tauri/src/db/: mod.rs
glint/src-tauri/src/editor/: commands.rs  document.rs  mod.rs  window.rs
glint/src-tauri/src/ocr/: commands.rs  mod.rs  window.rs
glint/src-tauri/src/recorder/: audio.rs  cam.rs  ffmpeg.rs  mod.rs  pipes.rs  thumb.rs  trim.rs  windows.rs
glint/src-tauri/src/recorder/fx/: hooks.rs  keymap.rs  mod.rs  window.rs
glint/src-tauri/src/settings/: commands.rs  hotkeys.rs  hydrate.rs  image.rs  locations.rs  mod.rs  sound.rs
scripts/: fetch-ffmpeg.ps1  fetch-tesseract.ps1
spike/: Cargo.toml  RESULTS.md
spike/src/: main.rs
(+154 files in other folders)
