[package]
name = "glint"
version = "0.1.0"
description = "Glint – local-first Windows screenshot & screen-recording app"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-log = "2.8.0"
log = "0.4.33"
tauri-plugin-global-shortcut = "2.3.2"
xcap = "0.9.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
arboard = "3"
base64 = "0.22"
tauri-plugin-drag = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
winreg = "0.52"
tauri-plugin-shell = "2"
# Direct handle on the (already-transitive via Tauri) tokio runtime, only for
# `tokio::time` — used to bound the recorder's graceful-stop wait and the
# pre-record countdown. Unifies with Tauri's resolved tokio version.
tokio = { version = "1", features = ["time", "net", "io-util", "sync", "rt"] }
# WASAPI capture (mic) + loopback (system audio) — install-free system audio.
wasapi = "0.15"
# Win32 SetWindowDisplayAffinity(WDA_EXCLUDEFROMCAPTURE) so the recorder control
# bar is excluded from gdigrab's screen capture (visible on screen, absent from
# the video). HWND is fetched via raw-window-handle to stay version-independent
# of whichever `windows` version Tauri resolves.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
raw-window-handle = "0.6"

